# CostEstimateGenerator

./: .gitignore  README.md  launch_gui.pyw  pyproject.toml  python.cmd  requirements.txt  run_log.txt  scratch_gui_sim.py
.github/workflows/: ci.yml  memos-cron.yml
data_reference/: hma_crosswalk_dm23_21.csv
data_sample/: 1234567_project_quantities.xlsx  2000030_project_quantities.xlsx  2101166_project_quantities.xlsx  2200803_project_quantities.xlsx  2500487_project_quantities.xlsx  Estimate_Audit.csv  ~$2000030_project_quantities.xlsx
data_sample/BidTabsData/: 2025-09-10.xls
docs/: memo_test_plan.md
example_outputs/: Estimate_Draft.xlsx
references/memos/: README.md  config.json  run_report.json  state.json  state_backup.json  state_with_bom.json
references/policy/: policy.json
references/specs/: contract_percents.json
scripts/: create_desktop_shortcut.ps1  run_pipeline.py
scripts/dev/: launch_gui.pyw  temp_alt_seek_header.txt  update_cli_qty_path.py  update_pyproject_deps.py
scripts/memos/: README.md  prepare_approved.py  run_pipeline.py  validate_and_correct.py
src/costest/: ai_reporter.py  ai_selector.py  alternate_seek.py  api.py  bidtabs_io.py  cli.py  config.py  design_memo_prices.py  design_memos.py  estimate_writer.py  gui.py  hma_dm2321.py  models.py  policy.py  (+5 more)
tests/: test_bidtabs_io.py  test_cli_geometry_summary.py  test_contract_percents_config.py  test_design_memo_price_overrides.py  test_design_memos.py  test_gui_completion.py  test_hma_dm2321.py  test_price_fallbacks.py  test_price_logic_config.py  test_visuals.py  test_writer.py
(+196 files in other folders)
