[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "costest"
version = "0.1.0"
description = "Cost Estimate Generator"
readme = "README.md"
authors = [{ name = "Road Tools Automation" }]
requires-python = ">=3.9"
dependencies = [
    "numpy==1.26.4",
    "pandas==1.5.3",
    "openpyxl==3.1.2",
    "python-dotenv>=1.0.0,<2.0.0",
    "xlrd>=2.0.1,<3.0.0",
    "openai>=1.0.0,<2.0.0",
    "reportlab>=4.0.0,<5.0.0",
    "pypdf>=3.1.0,<5.0.0",
    "jsonschema>=4.19.0,<5.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = [
    "pytest>=7.4,<8",
    "ruff>=0.5",
    "mypy>=1.9",
    "types-PyYAML; python_version < '3.12'",
]

[project.scripts]
costest = "costest.cli:main"
costest-gui = "costest.gui:main"


[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[tool.mypy]
python_version = "3.9"
ignore_missing_imports = true
warn_return_any = false
warn_unused_ignores = false
